--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                 </div>
-
+            
                 <div class="col-lg-4 col-6">
                     <!-- small box -->
                     <div class="small-box bg-success">
@@ -53,6 +53,51 @@
                                 {{totalPortfolio.total | currency:'BRL'}}
                             </h3>
                             <p>TOTAL (R$918.30 Selic 2029)</p>
+                        </div>
+                        <div class="icon">
+                            <i class="fas fa-chart-pie"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-6">
+                    <!-- small box -->
+                    <div class="small-box bg-success">
+                        <div class="inner">
+                            <h3>
+                                {{totalDivFiis | currency:'BRL'}}
+                            </h3>
+                            <p>FIIs</p>
+                        </div>
+                        <div class="icon">
+                            <i class="fas fa-home"></i>
+                        </div>
+                    </div>
+                </div>
+            
+                <div class="col-lg-4 col-6">
+                    <!-- small box -->
+                    <div class="small-box bg-success">
+                        <div class="inner">
+                            <h3>
+                                {{totalDivStocks | currency:'BRL'}}
+                            </h3>
+                            <p>STOCKS</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-6">
+                    <!-- small box -->
+                    <div class="small-box bg-success">
+                        <div class="inner">
+                            <h3>
+                                {{totalDiv | currency:'BRL'}}
+                            </h3>
+                            <p>TOTAL</p>
                         </div>
                         <div class="icon">
                             <i class="fas fa-chart-pie"></i>
