--- a/src/app/templates/main-sidebar/main-sidebar.component.html
+++ b/src/app/templates/main-sidebar/main-sidebar.component.html
@@ -16,7 +16,7 @@
                with font-awesome or any other icon font library -->
                 <li class="nav-header">MENU</li>
                 <li class="nav-item">
-                    <a href="/" class="nav-link">
+                    <a href="/dashboard" class="nav-link">
                         <i class="nav-icon fas fa-calendar-alt"></i>
                         <p>
                             Dashboard
