--- a/src/app/templates/main-sidebar/main-sidebar.component.html
+++ b/src/app/templates/main-sidebar/main-sidebar.component.html
@@ -1,7 +1,7 @@
 <!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
+    <a href="/dashboard" class="brand-link">
         <img src="assets/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
             style="opacity: .8">
         <span class="brand-text font-weight-light">Portfolio</span>
@@ -22,9 +22,9 @@
                             Dashboard
                         </p>
                     </a>
-                </li>                
+                </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="" class="nav-link">
                         <i class="nav-icon fas fa-dollar-sign"></i>
                         <p>
                             Financial
@@ -45,7 +45,7 @@
                                 <i class="nav-icon fas fa-sack-dollar"></i>
                                 <p>Dividends</p>
                             </a>
-                        </li>                        
+                        </li>
                     </ul>
                 </li>
             </ul>
