--- a/src/app/dividends/add-dividends/add-dividends.component.html
+++ b/src/app/dividends/add-dividends/add-dividends.component.html
@@ -28,7 +28,7 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label>Minimal</label>
+                                            <label>Asset</label>
                                             <select class="form-control" formControlName="asset_id">
                                                 <option *ngFor="let asset of assets" value="{{asset.id}}">
                                                     {{asset.symbol}}
