--- a/src/app/transactions/add/add.component.html
+++ b/src/app/transactions/add/add.component.html
@@ -71,16 +71,15 @@
                                         </div>
                                     </div>
                                     <div class="col-4">
-                                        <label for="type">Type</label>
-                                        <div class="input-group mb-3">
-                                            <select class="form-control select2 select2-hidden-accessible"
-                                                style="width: 100%;" data-select2-id="1" tabindex="-1"
-                                                aria-hidden="true" formControlName="type_id">
+
+                                        <div class="form-group">
+                                            <label>Type</label>
+                                            <select class="form-control" formControlName="type_id">
                                                 <option data-select2-id="1" value="1">SELIC</option>
                                                 <option data-select2-id="2" value="2">FIIS</option>
                                                 <option data-select2-id="3" value="3">STOCKS</option>
                                             </select>
-                                        </div>
+                                        </div>                                        
                                     </div>
                                 </div>
                             </div>
