--- a/src/app/dividends/add-dividends/add-dividends.component.html
+++ b/src/app/dividends/add-dividends/add-dividends.component.html
@@ -65,8 +65,9 @@
                             </div>
                             <!-- /.card-body -->
                             <div class="card-footer">
-                                <button type="submit" class="btn btn-primary">Submit</button>
-                            </div>
+                                <a href="dividends" type="button" class="btn btn-primary">Cancel</a>                                
+                                <button type="submit" class="btn btn-primary float-right">Add</button>
+                            </div>                            
                         </form>
                     </div>
                     <!-- /.card -->
