--- a/src/app/dividends/dividends.component.html
+++ b/src/app/dividends/dividends.component.html
@@ -41,14 +41,16 @@
                                                         rowspan="1" colspan="1"
                                                         aria-label="Browser: activate to sort column ascending">Asset
                                                     </th>
-                                                    <th class="sorting" tabindex="0" aria-controls="dataTableDefault"
-                                                        rowspan="1" colspan="1"
+                                                    <th class="sorting" tabindex="0" aria-controls="dataTableDefault" rowspan="1" colspan="1"
                                                         aria-label="Browser: activate to sort column ascending">Value
+                                                    </th>
+                                                    <th class="sorting" tabindex="0" aria-controls="dataTableDefault" rowspan="1" colspan="1"
+                                                        aria-label="Browser: activate to sort column ascending">Type
                                                     </th>
                                                     <th class="sorting" tabindex="0" aria-controls="dataTableDefault"
                                                         rowspan="1" colspan="1"
                                                         aria-label="Browser: activate to sort column ascending">Date
-                                                    </th>                                                    
+                                                    </th>
                                                     <th class="sorting" tabindex="0" aria-controls="dataTableDefault"
                                                         rowspan="1" colspan="1"
                                                         aria-label="Browser: activate to sort column ascending">Options
@@ -58,10 +60,11 @@
                                             <tbody>
                                                 <tr *ngFor="let dividend of dividends">
                                                     <td hidden="hidden">{{ dividend.id }}</td>
-                                                    <td class="dtr-control sorting_1" tabindex="0">{{ dividend.asset.symbol
+                                                    <td class="dtr-control sorting_1" tabindex="0">{{
+                                                        dividend.asset.symbol
                                                         }}</td>
-                                                    <td class="dtr-control sorting_1" tabindex="0"
-                                                        style="text-align: right;">{{ dividend.value }}</td>                                                    
+                                                    <td class="dtr-control sorting_1" tabindex="0" style="text-align: right;">{{ dividend.value }}</td>
+                                                    <td class="dtr-control sorting_1" tabindex="0" style="text-align: right;">{{ dividend.asset.assets_type.name }}</td>
                                                     <td class="dtr-control sorting_1" tabindex="0" data-sort='YYYYMMDD'
                                                         style="text-align: right;">{{
                                                         dividend.date |
