--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -72,7 +72,7 @@
                                             <tbody>
                                                 <tr *ngFor="let transaction of transactions">
                                                     <td hidden="hidden">{{ transaction.id }}</td>
-                                                    <td class="dtr-control sorting_1" tabindex="0">{{ transaction.symbol
+                                                    <td class="dtr-control sorting_1" tabindex="0">{{ transaction.asset.symbol
                                                         }}</td>
                                                     <td class="dtr-control sorting_1" tabindex="0"
                                                         style="text-align: right;">{{ transaction.quantity }}</td>
@@ -80,7 +80,7 @@
                                                         style="text-align: right;">$ {{ transaction.value }}</td>
                                                     <td class="dtr-control sorting_1" tabindex="0"
                                                         style="text-align: right;">$ {{ transaction.total }}</td>
-                                                    <td>{{ transaction.transactions_type.symbol }}</td>
+                                                    <td>{{ transaction.asset.assets_type.name }}</td>
                                                     <td class="dtr-control sorting_1" tabindex="0" data-sort='YYYYMMDD'
                                                         style="text-align: right;">{{
                                                         transaction.trade_date |
