--- a/src/app/templates/main-sidebar/main-sidebar.component.html
+++ b/src/app/templates/main-sidebar/main-sidebar.component.html
@@ -17,7 +17,7 @@
                 <li class="nav-header">MENU</li>
                 <li class="nav-item">
                     <a href="/dashboard" class="nav-link">
-                        <i class="nav-icon fas fa-calendar-alt"></i>
+                        <i class="nav-icon fas fa-chart-pie"></i>
                         <p>
                             Dashboard
                         </p>
@@ -25,16 +25,33 @@
                 </li>
                 <li class="nav-item">
                     <a href="" class="nav-link">
-                        <i class="nav-icon fas fa-dollar-sign"></i>
+                        <i class="nav-icon fas fa-folder"></i>
                         <p>
-                            Financial
+                            Inventory
+                            <i class="fas fa-angle-left right"></i>
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview" style="display: none;">
+                        <li class="nav-item">
+                            <a href="/assets" class="nav-link">
+                                <i class="nav-icon fas fa-list-alt"></i>
+                                <p>Assets</p>
+                            </a>
+                        </li>                        
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a href="" class="nav-link">
+                        <i class="nav-icon fas fa-pen"></i>
+                        <p>
+                            Manage
                             <i class="fas fa-angle-left right"></i>
                         </p>
                     </a>
                     <ul class="nav nav-treeview" style="display: none;">
                         <li class="nav-item">
                             <a href="/transactions" class="nav-link">
-                                <i class="nav-icon far fa-image"></i>
+                                <i class="nav-icon fas fa-dollar-sign"></i>
                                 <p>
                                     Transactions
                                 </p>
@@ -42,7 +59,7 @@
                         </li>
                         <li class="nav-item">
                             <a href="/dividends" class="nav-link">
-                                <i class="nav-icon fas fa-sack-dollar"></i>
+                                <i class="nav-icon fas fa-arrow-alt-circle-up"></i>
                                 <p>Dividends</p>
                             </a>
                         </li>
