--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -154,6 +154,24 @@
                 <div class="card-header">
                     <h3 class="card-title">
                         <i class="fas fa-tag"></i>
+                        DIVIDEND
+                    </h3>
+                </div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-lg-6 col-6">
+                            <app-monthly-dividends-chart></app-monthly-dividends-chart>
+                        </div>
+                        <div class="col-lg-6 col-6">
+                            <app-monthly-dividends-per-type-chart></app-monthly-dividends-per-type-chart>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card card-default color-palette-box">
+                <div class="card-header">
+                    <h3 class="card-title">
+                        <i class="fas fa-tag"></i>
                         CHARTS
                     </h3>
                 </div>
@@ -166,7 +184,7 @@
                             <app-assets-chart></app-assets-chart>
                         </div>
                         <div class="col-lg-6 col-6">
-                            
+
                         </div>
                     </div>
                 </div>
