--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -72,21 +72,21 @@
                                             <tbody>
                                                 <tr *ngFor="let transaction of transactions">
                                                     <td hidden="hidden">{{ transaction.id }}</td>
-                                                    <td class="dtr-control sorting_1" tabindex="0">{{ transaction.asset.symbol
+                                                    <td class="dtr-control" tabindex="0">{{ transaction.asset.symbol
                                                         }}</td>
-                                                    <td class="dtr-control sorting_1" tabindex="0"
+                                                    <td class="dtr-control" tabindex="0"
                                                         style="text-align: right;">{{ transaction.quantity }}</td>
-                                                    <td class="dtr-control sorting_1" tabindex="0"
+                                                    <td class="dtr-control" tabindex="0"
                                                         style="text-align: right;">$ {{ transaction.value }}</td>
-                                                    <td class="dtr-control sorting_1" tabindex="0"
+                                                    <td class="dtr-control" tabindex="0"
                                                         style="text-align: right;">$ {{ transaction.total }}</td>
                                                     <td>{{ transaction.asset.assets_type.name }}</td>
-                                                    <td class="dtr-control sorting_1" tabindex="0" data-sort='YYYYMMDD'
+                                                    <td class="dtr-control sorting_desc" tabindex="0"
                                                         style="text-align: right;">{{
                                                         transaction.trade_date |
                                                         date: 'dd/MM/YYYY' }}
                                                     </td>
-                                                    <td class="dtr-control sorting_1" tabindex="0"
+                                                    <td class="dtr-control" tabindex="6"
                                                         style="text-align: center;">
                                                         <div class="btn-group">
                                                             <a href="transaction/edit/{{transaction.id}}"
